# waybench

./: Cargo.toml  build.rs  gnuplot.sh  results.csv
src/: main.rs
